--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-router-dom": "^6.22.2",
     "recharts": "^2.12.3",
     "redux": "^5.0.1",
-    "sass": "^1.71.1"
+    "sass": "^1.71.1",
+    "sortablejs": "^1.15.6"
   },
   "devDependencies": {
     "@types/react": "^18.2.56",
