--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "push-main": "git add . && git commit -m "Update source" && git push origin main",
+      "push-main": "git add . && git commit -a -m \"Update-source\" && git push origin main",
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
